--- a/index.css
+++ b/index.css
@@ -9,7 +9,7 @@
 
 .container {
     font-size: 10px;
-    background: url('./background.jpg') bottom center;
+    background: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url('./background.jpg') bottom center;
     background-size: cover;
     background-attachment: fixed;
     display: flex;
@@ -30,7 +30,8 @@
 }
 
 .key {
-    border: 0.4rem solid black;
+    border: 0.4rem solid;
+    border-color: whitesmoke;
     border-radius: 0.5rem;
     font-size: 1.5rem;
     padding: 1rem 0.5rem;
@@ -39,7 +40,7 @@
     text-align: center;
     color: white;
     background: rgba(0, 0, 0, 0.4);
-    text-shadow: 0 0 0.5rem black;
+    text-shadow: 0 0 0.5rem rebeccapurple;
     cursor: pointer;
     flex: 0 1 auto;
 }
@@ -56,11 +57,21 @@
 }
 
 .key-press {
-    transform: scale(1.1);
-    border-color: #ffc600;
-    box-shadow: 0 0 1rem #ffc600;
-    color: #ffc600;
+  transform: scale(1.1);
+  border-color: #ffc600;
+  box-shadow: 0 0 1rem #ffc600;
+  color: #ffc600;
+  text-shadow:
+    0 0 5px #ffc600,
+    0 0 10px #ffc600,
+    0 0 20px #ffc600,
+    0 0 40px #ffc600,
+    0 0 80px #ffc600,
+    0 0 90px #ffc600,
+    0 0 100px #ffc600,
+    0 0 150px #ffc600;
 }
+
 
 /* Tablet screens (768px and below) */
 @media (max-width: 768px) {
@@ -78,7 +89,7 @@
         width: 8rem;
         margin: 0.5rem;
         padding: 0.75rem 0.4rem;
-        border: 0.3rem solid black;
+        border: 0.3rem solid ;
         font-size: 1.2rem;
     }
 
@@ -107,7 +118,7 @@
         width: 6rem;
         margin: 0.25rem;
         padding: 0.6rem 0.3rem;
-        border: 0.25rem solid black;
+        border: 0.25rem solid ;
         font-size: 1rem;
         border-radius: 0.4rem;
     }
@@ -137,7 +148,7 @@
         width: 5rem;
         margin: 0.2rem;
         padding: 0.5rem 0.2rem;
-        border: 0.2rem solid black;
+        border: 0.2rem solid ;
         font-size: 0.9rem;
     }
 
